# benchmarks

./: .gitignore  README.md
terminal-bench/: .gitignore  NEXT.md  README.md  TODO.md  pyproject.toml  run_benchmark.py  run_single.sh  setup.py  tasks_all.txt
terminal-bench/edge_wheel/: todoforai_edge_cli-0.12.2-py3-none-any.whl
terminal-bench/jobs/: .gitignore
terminal-bench/jobs/2026-04-15__17-38-06/: config.json
terminal-bench/jobs/2026-04-15__17-38-45/: config.json
terminal-bench/jobs/2026-04-15__17-39-43/: config.json
terminal-bench/jobs/2026-04-16__13-06-02/: config.json  result.json
terminal-bench/jobs/2026-04-16__13-14-24/: config.json  result.json
terminal-bench/jobs/2026-04-16__13-16-11/: config.json  result.json
terminal-bench/jobs/2026-04-16__13-18-19/: config.json  result.json
terminal-bench/jobs/2026-04-16__13-24-08/: config.json  result.json
terminal-bench/jobs/2026-04-16__13-32-16/: config.json  result.json
terminal-bench/jobs/2026-04-16__13-36-23/: config.json  result.json
terminal-bench/jobs/2026-04-16__13-45-40/: config.json  result.json
terminal-bench/jobs/2026-04-16__15-08-54/: config.json  result.json
terminal-bench/jobs/2026-04-20__13-44-20/: config.json  result.json
terminal-bench/jobs/2026-04-21__14-37-19/: config.json  result.json
terminal-bench/jobs/2026-04-21__14-51-29/: config.json
terminal-bench/jobs/2026-04-22__11-56-08/: config.json  result.json
terminal-bench/jobs/2026-04-22__15-06-24/: config.json  result.json
terminal-bench/jobs/2026-04-22__15-53-33/: config.json  result.json
terminal-bench/jobs/2026-04-22__15-55-49/: config.json  result.json
terminal-bench/jobs/2026-04-22__16-07-17/: config.json  result.json
terminal-bench/jobs/2026-04-22__16-17-47/: config.json  result.json
terminal-bench/jobs/2026-04-22__17-03-42/: config.json  result.json
terminal-bench/jobs/2026-04-22__17-13-37/: config.json  result.json
terminal-bench/jobs/2026-04-22__21-39-40/: config.json  (+1 more)
terminal-bench/scripts/: check_backend_agents.py  create_dev_accounts.sh  patch_dockerfiles.sh  rebuild_binaries.sh  rebuild_wheels.sh  run_batches.sh  run_tbench_test.sh  test_agent_direct.py  test_edge_tools.py
terminal-bench/tests/: __init__.py  conftest.py  test_agent.py  test_harbor_agent.py
terminal-bench/todoforai_tbench/: __init__.py  agent.py  config.py  direct_agent.py  harbor_agent.py  install-todoforai.sh.j2  installed_agent.py
(+1838 files in other folders)
