[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "todoforai-tbench"
version = "0.1.0"
description = "TODOforAI adapter for Terminal-Bench evaluation"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "TODOforAI", email = "support@todoforai.com"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "terminal-bench>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.urls]
Repository = "https://github.com/todoforai/todoforai"

[tool.setuptools.packages.find]
where = ["."]
include = ["todoforai_tbench*"]

[tool.setuptools.package-data]
todoforai_tbench = ["scripts/*.sh"]
